<resources>
    <string name="app_name">Android Final Project</string>
    <string name="water">Water</string>
    <string name="sleep">Sleep</string>
    <string name="food">Food</string>
    <string name="title_activity_water">WaterActivity</string>
    <string name="fill_water">Add Water</string>
    <string name="reset_water">Reset Water</string>
    <string name="water_tap_text">Water Tap</string>
    <string name="sleep_text">Sleep</string>
    <string name="recipe_view">Time to eat</string>
    <string name="ok_text">OK</string>
    <string name="add_waterText">add water</string>
    <string name="edit_text_add_water">Enter water amount in fluid ounces</string>
    <string name="initial_water_amount">0/0</string>
    <string name="checklist">checklist</string>
    <string name="brush_teeth">Brush teeth</string>
    <string name="drink_water">Drink a glass of water</string>
    <string name="checkbox_stretch">Stretch</string>
    <string name="bedtime_button">Set Bedtime</string>
    <string name="target_bedtime"></string>
    <string name="display_bedtime_button">Display Bedtime</string>
    <string name="recipe1">Vegetarian Casserole</string>
    <string name="recipe2">Spicy Arrabiata Penne</string>
    <string name="recipe3">Jerk chicken with rice &amp; peas</string>
    <string name="recipe4">Chicken Marengo</string>
    <string name="recipe5">Peach &amp; Blueberry Grunt</string>
    <string name="recipe6">Chilli prawn linguine</string>
    <string name="recipe7">Chocolate Avocado Mousse</string>
    <string name="recipe8">New York cheesecake</string>
    <string name="recipe9">Vegan Chocolate Cake</string>
    <string name="recipe10">Vegan Lasagna</string>
    <string name="recipe11">Fettucine alfredo</string>
    <string name="description1">Heat the oil in a large, heavy-based pan. Add the onions and cook gently for 5 – 10 mins until softened.\nAdd the garlic, spices, dried thyme, carrots, celery and peppers and cook for 5 minutes.\nAdd the tomatoes, stock, courgettes and fresh thyme and cook for 20 - 25 minutes.\nTake out the thyme sprigs. Stir in the lentils and bring back to a simmer. Serve with wild and white basmati rice, mash or quinoa.</string>
    <string name="description2">Bring a large pot of water to a boil. Add kosher salt to the boiling water, then add the pasta. Cook according to the package instructions, about 9 minutes.\nIn a large skillet over medium-high heat, add the olive oil and heat until the oil starts to shimmer. Add the garlic and cook, stirring, until fragrant, 1 to 2 minutes. Add the chopped tomatoes, red chile flakes, Italian seasoning and salt and pepper to taste. Bring to a boil and cook for 5 minutes. Remove from the heat and add the chopped basil.\nDrain the pasta and add it to the sauce. Garnish with Parmigiano-Reggiano flakes and more basil and serve warm.</string>
    <string name="description3"></string>

    <string name="recipeItems1">- 1 Rapeseed Oil\n
			- 1 Onion\n
			- 3 cloves Garlic\n
			- 1 tsp Paprika\n
			- ½ tsp Cumin\n
			- 1 tblsp Thyme\n
			- 3 Medium Carrots\n
			- 2 small stalks Celery\n
			- 1 Red Pepper\n
			- 1 Yellow Pepper\n
			- 2 x 400g tins Tomato\n
			- 250ml Vegetable Stock Cube\n
			- 2 sliced Courgettes\n
			- 2 sprigs Thyme\n
			- 250g Lentils</string>
    <string name="recipeItems2">- 1 pound penne rigate\n
			- 1/4 cup olive oil\n
			- 3 cloves garlic\n
			- 1 tin chopped tomatoes\n
			- 1/2 teaspoon red chile flakes\n
			- 1/2 teaspoon italian seasoning\n
			- 6 leaves basil\n
			- spinkling Parmigiano-Reggiano</string>
    <string name="recipeItems3">- 12 Chicken Thighs\n
			- 1/2 Lime\n
			- 1 bunch Spring Onions\n
			- 1 tbs chopped Ginger\n
			- 3 cloves Garlic\n
			- 1/2 Onion\n
			- 3 chopped Red Chilli\n
			- 1/2 teaspoon Thyme\n
			- Juice of 1 Lime\n
			- 2 tbs Soy Sauce\n
			- 2 tbs Vegetable Oil\n
			- 3 tbs Brown Sugar\n
			- 1 tbs Allspice\n
			- 200g Basmati Rice\n
			- 400g Coconut Milk\n
			- 1 bunch Spring Onions\n
			- 2 sprigs Thyme\n
			- 2 cloves chopped Garlic\n
			- 1 tbs Allspice\n
			- 800g Kidney Beans</string>
    <string name="recipeItems4">- 1 tbs Olive Oil\n
			- 300g Mushrooms\n
			- 4 Chicken Legs\n
			- 500g Passata\n
			- 1 Chicken Stock Cube\n
			- 100g Black Olives\n
			- Chopped Parsley</string>
    <string name="recipeItems5">- 1 tsp Corn Flour\n
			- Juice of 2 Orange\n
			- Zest of 1 Orange\n
			- 2 tbs Caster Sugar\n
			- 6 Peaches\
			"- 250g Blueberries\n
			- 200g Self-raising Flour\n
			- 50g Butter\n
			- 100g Muscovado Sugar\n
			- 1 tsp Cinnamon\n
			- 6 tblsp Milk\n</string>
    <string name="recipeItems6">- 280g Linguine Pasta\n
			- 200g Sugar Snap Peas\n
			- 2 tblsp Olive Oil\n
			- 2 cloves chopped Garlic Clove\n
			- 1 large Red Chilli\n
			- 24 Skinned King Prawns\n
			- 12 Cherry Tomatoes\n
			- Handful Basil Leaves\n
			- Leaves Lettuce\n
			- to serve Bread\n
			- 2 tbsp Fromage Frais\n
			- Grated Zest of 2 Lime\n
			- 2 tsp Caster Sugar</string>
    <string name="recipeItems7">- 1 Banana\n
			- 3 tbsp Cacao\n
			- 1 Avocado\n
			- 2 tblsp Honey\n
			- 1 tsp Lemon Juice\n
			- 1 tsp Vanilla\n
			- 2 tbsp Water\n
			- pinch Sea Salt</string>
    <string name="recipeItems8">- 85g Butter\n
			- 140g Sour Cream\n
			- 1tbsp Sugar\n
			- 900g Cream Cheese\n
			- 250g Caster Sugar\n
			- 3 tbs Plain Flour\n
			- 1 ½ teaspoons Lemon Juice\n
			- 3 Large Eggs\n
			- 250ml Sour Cream\n
			- 150ml Sour Cream\n
			- 1 tbsp Caster Sugar\n
			- 2 tsp Lemon Juice</string>
    <string name="recipeItems9">- 1 1/4 cup self raising flour\n
			- 1/2 cup coco sugar\n
			- 1/3 cup raw cacao\n
			- 1 tsp baking powder\n
			- 2 flax eggs\n
			- 1/2 cup almond milk\n
			- 1 tsp vanilla\n
			- 1/2 cup boiling water</string>
    <string name="recipeItems10">- 1 cups green red lentils\n
			- 1 carrot\n
			- 1 onion\n
			- 1 small zucchini\n
			- sprinking coriander\n
			- 150g spinach\n
			- 10 lasagne sheets\n
			- 35g vegan butter\n
			- 4 tablespoons flour\n
			- 300ml soya milk\n
			- 1.5 teaspoons mustard\n
			- 1 teaspoon vinegar</string>
    <string name="recipeItems11">- 227g Clotted Cream\n
			- 25g Butter\n
			- 1 tsp Corn Flour\n
			- 100g Parmesan Cheese\n
			- Grated Nutmeg\n
			- 250g Fettuccine\n
			- Chopped Parsley</string>



    <string-array name="waterValues">
        <item>Enter a water amount…</item>
        <item>8 fl oz.</item>
        <item>12 fl oz.</item>
        <item>16.9 fl oz.</item>
        <item>18 fl oz.</item>
        <item>24 fl oz.</item>
        <item>1 L</item>
    </string-array>
    <string-array name="waterNums">
        <item>0</item>
        <item>8</item>
        <item>12</item>
        <item>16.9</item>
        <item>18</item>
        <item>24</item>
        <item>33.8</item>
    </string-array>
    <string-array name="AMPM">
        <item>AM</item>
        <item>PM</item>
    </string-array>

</resources>
