<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.lewisu.cs.nsoto.androidfinalproject.ChecklistActivity">

    <!-- comment
    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ListView>
    -->

    <CheckBox
        android:id="@+id/check_brush_teeth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brush_teeth"
        />
    <CheckBox
        android:id="@+id/check_drink_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink_water" />
    <CheckBox
        android:id="@+id/check_stretch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_stretch"/>
    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
