<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bedtime1_01"
    tools:context="edu.lewisu.cs.nsoto.androidfinalproject.SleepScreenActivity">

    <com.tomerrosenfeld.customanalogclockview.CustomAnalogClock
        android:id="@+id/analog_clock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:default_watchface="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/text_bedtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="40dp"
        android:text="@string/target_bedtime"
        android:textColor="#FFFF"

        android:textSize="40dp" />

    <Button
        android:id="@+id/checklist"
        android:text="@string/checklist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickChecklist"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <Button
        android:id="@+id/bedtime_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bedtime_button"/>

    <Button
        android:id="@+id/display_bed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checklist"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/checklist"
        android:text="Display Bedtime" />


</RelativeLayout>
